fixed height issue on mobile view

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,18 @@
 .App {
   width: 100%;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media only screen and (max-width: 1199px) {
+  .App {
+    margin: 50px 0px;
+    height: 100%;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .App {
+    height: 100vh;
+  }
 }
